# sqlite-ast-parser

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  README.md  litterate.config.py  pyproject.toml
.github/workflows/: deploy-docs.yml  publish-pypi.yml
docs/: IMPLEMENTATION_COMPLETE.md  TEST_RESULTS.md  lexer+parser_mental_model.md  sqlite_document_link_for_syntax.md  sqlite_syntax_reference.md
examples/: basic_usage.py  cli_demo.py
literate_docs/: index.html
literate_docs/examples/: basic_usage.py.html
literate_docs/sqlite_parser/: __init__.py.html  ast_nodes.py.html  debug.py.html  errors.py.html  utils.py.html
sqlite_parser/: __init__.py  ast_nodes.py  debug.py  errors.py  lexer.py  parser.py  utils.py
tests/: __init__.py  test_all_statements.py  test_cli.py
